fix(Forms): align card border (#2588)
Uses #2587 as the basis

--- a/packages/dnb-eufemia/src/extensions/forms/Layout/style/dnb-card.scss
+++ b/packages/dnb-eufemia/src/extensions/forms/Layout/style/dnb-card.scss
@@ -1,9 +1,10 @@
 .dnb-forms-card {
-  background-color: var(--color-white);
-  border: 4px solid #f2f2f5;
-  border-radius: 0.5rem;
   padding: var(--spacing-medium) var(--spacing-medium) var(--spacing-large)
     var(--spacing-medium);
+
+  background-color: var(--color-white);
+  border: 0.25rem solid var(--color-pistachio);
+  border-radius: 0.75rem;
 
   &__heading {
     font-size: var(--font-size-basis);
